--- a/giftlink-frontend/public/home.html
+++ b/giftlink-frontend/public/home.html
@@ -14,7 +14,7 @@
             <h1 class="display-4 mb-3">GiftLink</h1>
             <h2 class="mb-4">Share Gifts and Joy!</h2>
             <p class="lead">"Sharing is the essence of community. It is through giving that we enrich and perpetuate both our lives and the lives of others."</p>
-            <a href="/app" class="btn btn-primary">Get Started</a>
+            <a href="/" class="btn btn-primary">Get Started</a>
         </div>
     </div>
 </body>
